2009-08-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-message): If the current buffer is not
	a minibuffer, insert the message in the echo area rather than at the
	end of the buffer.
	(completion-annotate-function): New variable.
	(minibuffer-completion-help): Use it.
	(completion--embedded-envvar-table): Environment vars are
	always case-sensitive.

2009-08-30  Glenn Morris  <rgm@gnu.org>

	* progmodes/fortran.el (fortran-start-prog-re): New constant, extracted
	from fortran-current-defun.
	(fortran-beginning-of-subprogram): Be more precise about finding the
	start, to avoid an infinite loop in end-of-defun.  (Bug#4259)
	(fortran-end-of-subprogram): Simplify.
	(fortran-current-defun): Use fortran-start-prog-re.

2009-08-29  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (do-after-load-evaluation): Simplify.

2009-08-29  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-print-log-internal): Move RCS/CVS specific code ...

	* vc-rcs.el (vc-rcs-print-log-cleanup): ... here.  New function.
	(vc-rcs-print-log): Use it.

	* vc-cvs.el (vc-cvs-print-log): Use vc-rcs-print-log-cleanup.

2009-08-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* paths.el (abbrev-file-name): Move to abbrev.el.
	* abbrev.el (abbrev-file-name): Move from paths.el.
	Obey user-emacs-directory.
	* calc/calc.el (calc-settings-file): Don't autoload and instead obey
	user-emacs-directory.
	* dos-fns.el (dos-reevaluate-defcustoms): Don't reevaluate
	abbrev-file-name and calc-settings-file any more.
	* startup.el (command-line): Recompute abbrev-file-name and
	abbreviated-home-dir.
	(normal-no-mouse-startup-screen): Improve the generic code and get rid
	of the special code for when C-h bindings haven't been changed.
	(display-startup-echo-area-message): Use with-current-buffer.
	(command-line-1): Use a list of strings, rather than a list of lists
	of strings for longopts.

	* files.el (get-free-disk-space): Use / for default-directory.
